# agentcad

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agentcad/: __init__.py  camera.py  cli.py  config.py  engine.py  manifest.py  output.py  session.py  templating.py  viewer.py  webdebug.py
src/agentcad/engines/: __init__.py  openscad.py  voxelcad.py
src/agentcad/templates/: variant.html  viewer.html
